# sidereus

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  README.md  configure
doc/: CMakeLists.txt  Doxyfile.in  main_page.dox
doc/images/: sid_logo.eps
sidereus/: CMakeLists.txt  julian_day.cxx  julian_day.hxx  nutation.cxx  nutation.hxx  parallax.cxx  parallax.hxx  precession.cxx  precession.hxx  sidereal_time.cxx  sidereal_time.hxx  sidereus.cxx  sidereus.hxx  transform_coord.cxx  transform_coord.hxx
test/: CMakeLists.txt  julian_day_test.cxx  nutation_test.cxx  parallax_test.cxx  sidereal_time_test.cxx  sidereus_test.cxx  transform_coord_test.cxx
tools/: CMakeLists.txt
tools/sidereus_transforms/: CMakeLists.txt  sidereus_transforms.cxx
